2011-01-29  Carsten Haitzler (The Rasterman)

        1.0.0 release

2011-02-01  Cedric Bail

	* Improve scalability and raw speed of Chained Mempool.

2011-02-08  Tom Hacohen

	* Added eina_unicode_strndup

2011-02-16  Mike Blumenkrantz

        * Added EINA_INLIST_FOREACH_SAFE